# Triad

./: .gitignore  README.md  build_zip.sh  pyproject.toml
blockchain/: block.py  chain.py  consensus.py  executor.py  poh.py  transaction.py
tests/: test_chain.py  test_forks.py  tests_forks.py
triad/: __init__.py  __main__.py
